[package]
name = "collab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.12.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.2"
handle-errors = { path = "handle-errors", version = "0.1.0" }
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version="0.3.11", features=["fmt", "std", "env-filter"]}

